--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src="./Assets/javascript/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
   </body>
 </html>
